added a new file i.e., Word_Definition

--- a/index.html
+++ b/index.html
@@ -68,7 +68,19 @@
         </div>
         <!--End of auto write text column-->
       
-      
+        <!--This column is for Word Definition-->
+        <div class="card">
+          <!--Start of Word Definition-->
+          <img class="card-img-top" src="assets/Images/word_definition.jpg" alt="Word Definition">
+          <div class="card-body">
+            <h5 class="card-title">Word Definition</h5>
+            <p>Always get the right definition of the words!!</p>
+            <a href="Public/word_definition.html" class="btn btn-outline-primary">Try now</a>
+          </div>
+        </div>
+        <!--End of Word Definition-->
+
+
         <!--This column is for calculator-->
         <div class="card">
           <!--Start of Calculator-->
