--- a/index.html
+++ b/index.html
@@ -269,13 +269,12 @@
   <img class="card-img-top" src="assets/Images/incrementinator.png" alt="Card restaurant">
   <div class="card-body">
     <h5 class="card-title">Incrementinator 2.0</h5>
-    <p>Beginners project using html,css,js!!</p>
+    <p id="inc-p">Beginners project using html,css,js!!</p>
     <a href="Public/incrementinator.html" class="btn btn-outline-primary">Try now</a>
   </div>
 </div>
 <!-- end of incrementinator 2.0 -->
-    </div> 
-
+</div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
