Last cards alligned

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   </div>
   <!--End of Library website-->
   <!-- This is for Guess the Number -->
-  <div class="card">
+  <div class="card card1">
     <!--Start of Guess the Number-->
     <img class="card-img-top" src="assets/Images/guess-the-number.png" alt="guess-the-number>
     <div class="card-body">
