Updated scientific calculator card in index

--- a/index.html
+++ b/index.html
@@ -521,6 +521,14 @@
       <a href="Public/word-count-calculator.html" class="btn btn-outline-primary">Try Now</a>
     </div>
   </div>
+  <div class="card card1">
+    <img class="card-img-top" src="assets/Images/scientific_calculator.png" alt="Art">
+   <div class="card-body">
+      <h5 class="card-title">Scientific Calculator</h5>
+      <p>Lets do some calculations!</p>
+      <a href="Public/scientific_calculator.html" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
     </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
