--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="assets/Js/quiz.js" defer></script>
   <script src="assets/Js/weather_app.js" defer></script>
   <script src="assets/Js/Speed_Typer.js" defer></script>
+  <script src="assets/Js/guess-the-number.js" defer></script>
 
 
   
@@ -56,7 +57,7 @@
           <!--Start of auto-write-text-->
           <img class="card-img-top" src="assets/Images/auto-write.jpg" alt="Card auto-write">
           <div class="auto-write">
-            <h4 id="auto-write-target"></h4>
+            <h4 style="color: crimson;" id="auto-write-target" class="auto-write-target-class"></h4>
           </div>
           <!--End of auto write text-->
           <div class="card-body" id="auto-write-text">
@@ -161,7 +162,7 @@
         <div class="card">
           <img class="card-img-top" src="assets/Images/quiz.jpg" alt="Card calculator">
             <!--Start of quiz-->
-        <div class="card-body" id="question">
+        <div class="card-body" id="quizappid">
           
           <h5 class="card-title">Take Quiz</h5>
           <p>Quizes - A way of fun learning!</p>
@@ -275,6 +276,17 @@
   </div>
 </div>
 <!-- end of Rock Paper Scissor -->
+<!-- This is for Incrementinator 2.0-->
+<div class="card">
+  <!--Start of incrementinator 2.0-->
+  <img class="card-img-top" src="assets/Images/incrementinator.png" alt="Card restaurant">
+  <div class="card-body">
+    <h5 class="card-title">Incrementinator 2.0</h5>
+    <p id="inc-p">Beginners project using html,css,js!!</p>
+    <a href="Public/incrementinator.html" class="btn btn-outline-primary">Try now</a>
+  </div>
+</div>
+<!-- end of incrementinator 2.0 -->
   <!--This column is for accordion-->
   <div class="card card1">
     
@@ -521,15 +533,38 @@
       <a href="Public/word-count-calculator.html" class="btn btn-outline-primary">Try Now</a>
     </div>
   </div>
+  <!--This div is for crypto-app website-->
   <div class="card card1">
-    <img class="card-img-top" src="assets/Images/scientific_calculator.png" alt="Art">
+    <img class="card-img-top" src="assets/Images/crypto.jpg" alt="Library">
    <div class="card-body">
-      <h5 class="card-title">Scientific Calculator</h5>
-      <p>Lets do some calculations!</p>
-      <a href="Public/scientific_calculator.html" class="btn btn-outline-primary">Try Now</a>
+      <h5 class="card-title">Crypto-App</h5>
+      <p>Know the prices and many more about crypto!</p>
+      <a href="Public/crypto_app.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
     </div>
   </div>
-    </div> 
+  <!--End of crypto-app website-->
+  <!--This div is for Library website-->
+  <div class="card card1">
+    <img class="card-img-top" src="assets/Images/booksLibrary.png" alt="Library">
+   <div class="card-body">
+      <h5 class="card-title">Books Library</h5>
+      <p>Add Books or delete books from a list.</p>
+      <a href="Public/BooksLibrary.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
+  <!--End of Library website-->
+  <!-- This is for Guess the Number -->
+  <div class="card card1">
+    <!--Start of Guess the Number-->
+    <img class="card-img-top" src="assets/Images/guess-the-number.png" alt="guess-the-number>
+    <div class="card-body">
+      <h5 class="card-title">Guess The Number</h5>
+      <p>Is your guess correct?</p>
+      <a href="Public/guess-the-number.html" class="btn btn-outline-primary">Try now</a>
+    </div>
+  </div>
+<!-- end of guess the number -->
+</div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
