Added scientific calculator project in index.html

--- a/index.html
+++ b/index.html
@@ -543,6 +543,16 @@
     </div>
   </div>
   <!--End of crypto-app website-->
+  <!--This div is for scientific calculator website-->
+    <div class="card card1">
+      <img class="card-img-top" src="assets/Images/scientific_calculator.png" alt="scientific_calculator">
+     <div class="card-body">
+        <h5 class="card-title">Scientific Calculator</h5>
+        <p>Lets do some calculations!</p>
+        <a href="Public/scientific_calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+      </div>
+    </div>
+  <!--End of scientific calculator website-->
   <!--This div is for Library website-->
   <div class="card card1">
     <img class="card-img-top" src="assets/Images/booksLibrary.png" alt="Library">
