--- a/index.html
+++ b/index.html
@@ -554,6 +554,17 @@
       </div>
     </div>
   <!--End of scientific calculator website-->
+    
+  <!--This div is for GitHub Profiles website-->
+    <div class="card card1">
+      <img class="card-img-top" src="assets/Images/GitHub-Profiles.jpeg" alt="GitHub-Profiles">
+     <div class="card-body">
+        <h5 class="card-title">GitHub-Profiles</h5>
+        <p>Find some GitHub Profiles!</p>
+        <a href="Public/GitHub-Profiles.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+      </div>
+    </div>
+  <!--End of GitHub Profiles website-->
 
   <!--This div is for Library website-->
   <div class="card card1">
