fix issue #232 add a Simon Game

--- a/index.html
+++ b/index.html
@@ -576,10 +576,11 @@
     </div>
   </div>
   <!--End of Library website-->
+
   <!-- This is for Guess the Number -->
   <div class="card card1">
     <!--Start of Guess the Number-->
-    <img class="card-img-top" src="assets/Images/guess-the-number.png" alt="guess-the-number>
+    <img class="card-img-top" src="assets/Images/guess-the-number.png" alt="guess-the-number">
     <div class="card-body">
       <h5 class="card-title">Guess The Number</h5>
       <p>Is your guess correct?</p>
@@ -587,6 +588,20 @@
     </div>
   </div>
 <!-- end of guess the number -->
+
+<!-- This is for Simon Game -->
+<div class="card card1">
+  <!--Start of Simon Game-->
+  <img class="card-img-top" src="assets/Images/simon_game.png" alt="simon_game">
+  <div class="card-body">
+    <h5 class="card-title">Simon Game</h5>
+    <p>Do you remember</p>
+    <a href="Public/Simon_game.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!-- end of Simon Game -->
+
+
 </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
