Refactored project structure

--- a/Public/BaseX_Calculator.html
+++ b/Public/BaseX_Calculator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./../assets/css/BaseX_Calculator/style.css">
         <title>BaseX Calculator</title>
-        <script src="./app.js"></script>
+        <script src="./../assets/js/BaseX_Calculator.js"></script>
     </head>
     
     <body>
