--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
    <div class="card-body">
       <h5 class="card-title">Prime Factor Calculator</h5>
       <p>Calculate your primes now!!</p>
-      <a href="Public/primeCalc.html" class="btn btn-outline-primary">Get Started!</a>
+      <a href="Public/primeCalc.html" class="btn btn-outline-primary">Try Now</a>
     </div>
   </div>
   <div class="card card1">
