--- a/Public/loginform.html
+++ b/Public/loginform.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../assets/css/loginform.css" />
-  <title>Login Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Login Form</title>
+    <link rel="stylesheet" href="../assets/css/loginform.css">
 </head>
 
 <body>
-  <div class="allContent">
-    <h1 class="title">Login Form</h1>
-    <div class="Logincard">
-      <h1 class="formtitle">Login Your Account</h1>
-      <hr>
-      <form action="">
-        <span><label for="text">Username</label>
-          <input type="text" class="name" placeholder="Username"/>
-        </span>
-        <span>
-          <label for="password">Password</label>
-          <input type="password" class="password"  placeholder="Password"/>
-        </span>
-        <button class="submitBtn">Login</button>
-      </form>
-      <hr>
-      <div class="bottom">
-        <p>Don't have an account?<a href="">click here</a> | </p>
-        <a href="forget" class="pass">Forgot Password?</a>
-      </div>
+    <div class="container">
+        <form class="form" id="login">
+            <h1 class="form__title">Login</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Username or email">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="submit">Continue</button>
+            <p class="form__text">
+                <a href="#" class="form__link">Forgot your password?</a>
+            </p>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkCreateAccount">Don't have an account? Create account</a>
+            </p>
+        </form>
+        <form class="form form--hidden" id="createAccount">
+            <h1 class="form__title">Create Account</h1>
+            <div class="form__message form__message--error"></div>
+            <div class="form__input-group">
+                <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="text" class="form__input" autofocus placeholder="Email Address">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <div class="form__input-group">
+                <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                <div class="form__input-error-message"></div>
+            </div>
+            <button class="form__button" type="reset">Continue</button>
+            <p class="form__text">
+                <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
+            </p>
+        </form>
     </div>
-  </div>
+    <script src="../assets/Js/loginform.js"></script>
 </body>
-
-</html>
