--- a/Public/bmi-calculator.html
+++ b/Public/bmi-calculator.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
     <!--CSS Stylesheet-->
-    <link rel="stylesheet" href="./assets/CSS/bmi-calculator.css">
+    <link rel="stylesheet" href="../assets/CSS/bmi-calculator.css">
    
 </head>
 <body>
