Updated BMI Calculator Javascript file

--- a/Public/bmi-calculator.html
+++ b/Public/bmi-calculator.html
@@ -41,6 +41,6 @@
     </div>
 
     <!--Javscript file-->
-    <script src="./assets/JS/bmi-calculator.js"></script>
+    <script src="../assets/JS/bmi-calculator.js"></script>
 </body>
 </html>
