pong game files added

--- a/index.html
+++ b/index.html
@@ -635,6 +635,17 @@
 </div>
 <!-- end of Simon Game -->
 
+<!--This is for Pong Game -->
+<div class="card card1">
+  <!--Start of Simon Game-->
+  <img class="card-img-top" src="assets/Images/Pong-Game.PNG" alt="pong_game">
+  <div class="card-body">
+    <h5 class="card-title">Pong Game</h5>
+    <p></p>
+    <a href="Public/pong.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!--End of Pong Game-->
 
 </div> 
   <!-- Optional JavaScript -->
