dictionary app files added

--- a/index.html
+++ b/index.html
@@ -647,6 +647,18 @@
 </div>
 <!--End of Pong Game-->
 
+<!--This is for Dictionary App-->
+<div class="card card1">
+  <!--Start of Simon Game-->
+  <img class="card-img-top" src="assets/Images/Dictionary.PNG" alt="dictionary">
+  <div class="card-body">
+    <h5 class="card-title">Dictionary App</h5>
+    <p>Dictionary</p>
+    <a href="Public/dictionary.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!--End of Dictionary App-->
+
 </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
