Refactored project structure

--- a/Public/Color_Code_Converter.html
+++ b/Public/Color_Code_Converter.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./../assets/css/Color_Code_Converter.css">
         <title>Color Code Converter</title>
-        <script src="./app.js"></script>
+        <script src="./../assets/Js/Color_Code_Converter.js"></script>
     </head>
     
     <body>
