ice cream maker files added

--- a/index.html
+++ b/index.html
@@ -659,6 +659,18 @@
 </div>
 <!--End of Dictionary App-->
 
+<!--This is for Custom Ice Cream Make-->
+<div class="card card1">
+  <!--Start of Simon Game-->
+  <img class="card-img-top" src="assets/Images/Ice-Cream.PNG" alt="dictionary">
+  <div class="card-body">
+    <h5 class="card-title">Custom Ice Cream Maker</h5>
+    <p>Change the flavor of the ice cream according to your convienience</p>
+    <a href="Public/icecream.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!--End of Ice Cream Maker-->
+
 </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
