--- a/Public/Speed_Typer.html
+++ b/Public/Speed_Typer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Speed Typer</title>
-    <link rel="stylesheet" href="/assets/css/Speed_Typer.css" />
+    <link rel="stylesheet" href="../assets/css/Speed_Typer.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 </head>
 <body>
@@ -36,6 +36,6 @@
         </p>
         <div id="end-game-container" class="end-game-container"></div>
     </div>
-    <script src="/assets/Js/Speed_Typer.js"></script>
+    <script src="../assets/Js/Speed_Typer.js"></script>
 </body>
 </html>
