Added Dark Mode

--- a/Public/counter.html
+++ b/Public/counter.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="../assets/css/counter.css" />
 </head>
 
-<body>
+<body id="body">
+    <!-- This was added as a contribution -->
+    
+    <button type="button" class="btn changemode">Switch Dark mode</button>
+
+
+    <!-- This was added as a contribution -->
+ 
+
     <main>
         <div class="container">
             <h1>counter</h1>
