Modified Drum kit

--- a/Public/drum_kit.html
+++ b/Public/drum_kit.html
@@ -12,13 +12,13 @@
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
+    <button class="w drum" title="tom 1">w</button>
+    <button class="a drum" title="tom 2">a</button>
+    <button class="s drum" title="tom 3">s</button>
+    <button class="d drum" title="tom 4">d</button>
+    <button class="j drum" title="snare">j</button> 
+    <button class="k drum" title="crash">k</button>
+    <button class="l drum" title="kick-bass">l</button>
   </div>
 
 
