--- a/Public/crud-project.html
+++ b/Public/crud-project.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- CSS -->
-    <link type="text/css" rel="stylesheet" href="crud-project.css">
+    <link type="text/css" rel="stylesheet"  href="/assets/css/crud-project.css">
 
 </head>
 
@@ -76,7 +76,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- JS Scripts -->
-    <script type="text/javascript" src="./crud-project.js"></script>
+    <script type="text/javascript" src="/assets/Js/crud-project.js"></script>
 </body>
 
 </html>
