--- a/index.html
+++ b/index.html
@@ -671,6 +671,17 @@
 </div>
 <!--End of Ice Cream Maker-->
 
+<!--This div is for Transpose-Matrix Calculator website-->
+<div class="card card1">
+  <img class="card-img-top" src="assets/Images/TransposeMatrixCalculator.png" alt="Transpose-Matrix Calculator">
+ <div class="card-body">
+    <h5 class="card-title">Transpose-Matrix Calculator</h5>
+    <p>Find Transpose of your Matrix here</p>
+    <a href="Public/Transpose-Matrix-Calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!--End of Transpose-Matrix Calculator website-->
+
 </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
