Sneaker Site files added

--- a/index.html
+++ b/index.html
@@ -671,6 +671,19 @@
 </div>
 <!--End of Ice Cream Maker-->
 
+<!--This is for Sneaker Site-->
+<div class="card card1">
+  <!--Start of Sneaker Site-->
+  <img class="card-img-top" src="assets/Images/Nike1.PNG" alt="sneaker">
+  <div class="card-body">
+    <h5 class="card-title">Sneaker Site</h5>
+    <p>An Ecommerce Responsive Sneaker Site</p>
+    <a href="Public/sneaker.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!--End of Sneaker Site-->
+
+
 </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
