Added card link to index file of website

--- a/index.html
+++ b/index.html
@@ -682,6 +682,17 @@
   </div>
 </div>
 <!--End of Sneaker Site-->
+  
+<!--This is for crud project-->
+    <div class="card card1">
+    <img class="card-img-top" src="assets/Images/Crud.png" alt="Table">
+   <div class="card-body">
+      <h5 class="card-title">CRUD Project</h5>
+      <p>Maintain and update your records  here !</p>
+      <a href="Public/crud-project.html" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
+ <!--End of crud project-->
 
 
 </div> 
