Reset button bug fixed

--- a/Public/weight_conv.html
+++ b/Public/weight_conv.html
@@ -14,12 +14,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-6 offset-sm-6 col-md-8 offset-md-2 col-xl-6 offset-xl-3">
-                <h1 class="display-4 text-center mb-3" style="color:blue;font-weight:bold">Weight Convertor</h1>
+                <h1  id="heading" class="display-4 text-center mb-3">Weight Convertor</h1>
                 <div class="row">
                     <div class="col-sm-3">
                         <form id='mainForm'>
                             <div class="form-group">
-                                <input id="weightInput" type="number" class="form-control" class="form-control-lg" placeholder="Enter Weight...">
+                                <input id="weightInput"  min="0" max="10000000000000000" type="number" class="form-control" class="form-control-lg" placeholder="Enter Weight...">
                             </div>
                         </form>
                     </div>
