--- a/Public/Currency-converter.html
+++ b/Public/Currency-converter.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width-device=width,initial-scale=1">
     <title>Currency Converter</title>
-    <link rel="stylesheet" href="/assets/css/Currency-converter.css">
+    <link rel="stylesheet" href="../assets/css/Currency-converter.css">
 </head>
 <body>
 <div class="content">
@@ -24,5 +24,5 @@
     </div>
 </div>
 </body>
-<script src="/assets/Js/Currency-converter.js"></script>
+<script src="../assets/Js/Currency-converter.js"></script>
 </html>
