--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
         <!--This is for Hangman Project-->
         <div class="card card1">
             <!--Start of Currency Converter-->
-            <img class="card-img-top" src="./assets/Images/Web view.PNG" alt="converter">
+            <img class="card-img-top" src="/assets/Images/Web view.PNG" alt="converter">
             <div class="card-body">
                 <h5 class="card-title">Hangman Game</h5>
                 <p>Guess the given category</p>
@@ -713,6 +713,18 @@
             </div>
         </div>
         <!--End of Hangman Project-->
+        
+      <!--This is for multiple pages portfolio-->
+        <div class="card card1">
+            <!--Start of multiple pages portfolio-->
+            <img class="card-img-top" src="/assets/Images/multi-portfolio" alt="portfolio">
+            <div class="card-body">
+                <h5 class="card-title">Portfolio Website</h5>
+                <p>See how a real portfolio website actually looks like !</p>
+                <a href="/Public/multiple-portfolio.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+     <!--End of multiple pages portfolio-->
 
     </div>
     <!-- Optional JavaScript -->
