--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
         <!--This is for Hangman Project-->
         <div class="card card1">
             <!--Start of Currency Converter-->
-            <img class="card-img-top" src="/assets/Images/Web view.PNG" alt="converter">
+            <img class="card-img-top" src="./assets/Images/Web view.PNG" alt="converter">
             <div class="card-body">
                 <h5 class="card-title">Hangman Game</h5>
                 <p>Guess the given category</p>
