--- a/index.html
+++ b/index.html
@@ -713,6 +713,18 @@
             </div>
         </div>
         <!--End of Hangman Project-->
+        
+        <!--This is for To-Do List-->
+        <div class="card card1">
+            <!--Start of To-Do list-->
+            <img class="card-img-top" src="./assets/Images/to-doimg.png" alt="TO-DO list">
+            <div class="card-body">
+                <h5 class="card-title">TO-DO List</h5>
+                <p>Add your daily routine here to keep a check on them>
+                <a href="./Public/to-do.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!--End of To-Do-->
 
     </div>
     <!-- Optional JavaScript -->
