Successfully fixed the issue of Unworking files

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             </div>
         </div>
         <div class="card card1">
-            <img class="card-img-top" src="assets/Images/BMI_Calculator_landing_page.png" alt="Art">
+            <img class="card-img-top" src="./assets/Images/BMI_Calculator_image_landing_page.png" alt="Art">
             <div class="card-body">
                 <h5 class="card-title">BMI Calculator</h5>
                 <p>Calculate your BMI!</p>
