--- a/index.html
+++ b/index.html
@@ -1404,6 +1404,17 @@
 </div>
 <!--End of Transpose-Matrix Calculator website-->
 
+<!-- This is for RD return calculator project -->
+<div class="card card1">
+  <img class="card-img-top" src="./assets/Images/RD-return-calculator.png" alt="Transpose-Matrix Calculator">
+ <div class="card-body">
+    <h5 class="card-title">RD return calculator</h5>
+    <p>Calculates RD return</p>
+    <a href="./Public/RD-return-calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+  </div>
+</div>
+<!-- End of RD return calculator -->
+
 </div> 
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
