--- a/Public/restaurant/restaurant.html
+++ b/Public/restaurant/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,11 +16,11 @@
     
         <div class="container">
           <div class="topnav">
-            <a href="Visit_Us.html" target="_blank">Visit Us</a>
-            <a href="menu.html" target="_blank">Menu</a>
-            <a href="gallery.html" target="_blank">Gallery</a>
-            <a href="feedback.html" target="_blank">Feedback</a>
-            <a href="#footer" >About</a>
+            <a href="Visit_Us.html">Visit Us</a>
+            <a href="menu.html">Menu</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="feedback.html">Feedback</a>
+            <a href="about.html">About</a>
           </div>
         </div>
       
