--- a/Public/restaurant/menu.html
+++ b/Public/restaurant/menu.html
@@ -16,12 +16,12 @@
         
   <div class="container1">
     <div class="topnav">
-      <a href="restaurant.html" target="_blank">Home</a>
-      <a href="Visit_Us.html" target="_blank">Visit Us</a>
-      <a href="menu.html" target="_blank">Menu</a>
-      <a href="gallery.html" target="_blank">Gallery</a>
-      <a href="feedback.html" target="_blank">Feedback</a>
-      <a href="#footer" >About</a>
+      <a href="restaurant.html">Home</a>
+      <a href="Visit_Us.html">Visit Us</a>
+      <a href="menu.html">Menu</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="about.html">About</a>
     </div>
   </div>
 <body>
