Add footer section to the website

--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         data-y_margin="50">
     </script>
     <!--End of Buy me a coffee script-->
+
+    <!-- fontawesome starts -->
+   <script src="https://kit.fontawesome.com/bb036527a9.js" crossorigin="anonymous"></script>
+   <!--End of fontawesome -->
+   <!-- Start of google fonts -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Roboto+Slab&display=swap" rel="stylesheet">
+   <!-- End of google fonts -->
+
     <link href="assets/css/landing_page.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="assets/js/analog_clock1.js" defer></script>
@@ -1378,7 +1388,7 @@
             </div>
         </div>
         <!--End of Hangman Project-->
-        
+
       <!--This is for multiple pages portfolio-->
         <div class="card card1">
             <!--Start of multiple pages portfolio-->
@@ -1404,12 +1414,58 @@
 </div>
 <!--End of Transpose-Matrix Calculator website-->
 
-</div> 
+</div>
   <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!-- footer section starts -->
+
+    <footer class="footer">
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <!-- footer about section -->
+          <h3 class="footer-heading">ZeroOctave</h3>
+          <hr>
+          <p class = "footer-about" >ZeroOctave Javascript Projects provide some awesome web development projects to work upon and enhance your skills. The motive of this project is to help new learners like you to get familiar with web development skills.</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 ">
+          <!-- developers section -->
+          <h3 class="footer-heading">Developers</h3>
+          <ul class="developers">
+            <hr>
+            <li>Abhishek Kumar</li>
+            <li>Mr. Ånand</li>
+            <li>Abhishek Kumar</li>
+            <li>Jayant Goel</li>
+            <li>Jyoti prakash Rout</li>
+            <li>Prakhar Mishra</li>
+            <li>Souvik Mandal</li>
+            <li>Susmita Dey</li>
+            <li>Vasanti Suthar</li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 icon ">
+          <!-- social media icons -->
+          <h3 class="footer-heading">Follow Us</h3>
+          <hr>
+          <a href =""><i class="fa-brands fa-facebook fa-2x social-icon"></i></a><br>
+          <a href =""><i class="fa-brands fa-instagram fa-2x social-icon"></i></a><br>
+          <a href="https://twitter.com/zero_octave"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a><br>
+          <a href="https://zerooctave.github.io/"><i class="fa-solid fa-globe fa-2x social-icon"></i></a><br>
+          <a href="ZeroOctave@protonmail.com"><i class="fa-solid fa-envelope fa-2x social-icon"></i></a><br>
+        </div>
+      </div>
+
+      <!-- copyright notice -->
+      <div class="copyright">
+        <p class="copyright-message">© Copyright 2021-2022.<br>All rights reserved.</p>
+      </div>
+    </footer>
+    <!-- footer section ends -->
+
 
 </body>
 
