audio button working

--- a/Public/word_definition.html
+++ b/Public/word_definition.html
@@ -33,7 +33,7 @@
             <p></p>
             <span></span>
           </div>
-          <i class="fas fa-volume-up" onclick="playSound()"></i>
+          <i class="fas fa-volume-up" class="volume" onclick="playSound()"></i>
         </li>
         <div class="content">
           <li class="meaning">
