Update social media icons

--- a/index.html
+++ b/index.html
@@ -1451,8 +1451,7 @@
           <!-- social media icons -->
           <h3 class="footer-heading">Follow Us</h3>
           <hr>
-          <a href =""><i class="fa-brands fa-facebook fa-2x social-icon"></i></a><br>
-          <a href =""><i class="fa-brands fa-instagram fa-2x social-icon"></i></a><br>
+          <a href ="https://github.com/ZeroOctave/ZeroOctave-Javascript-Projects"><i class="fa-brands fa-github fa-2x social-icon"></i></a><br>
           <a href="https://twitter.com/zero_octave"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a><br>
           <a href="https://zerooctave.github.io/"><i class="fa-solid fa-globe fa-2x social-icon"></i></a><br>
           <a href="ZeroOctave@protonmail.com"><i class="fa-solid fa-envelope fa-2x social-icon"></i></a><br>
