Updated collab section

--- a/index.html
+++ b/index.html
@@ -1425,37 +1425,33 @@
 
     <footer class="footer">
       <div class="row">
+        <!-- footer about section -->
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <!-- footer about section -->
           <h3 class="footer-heading">ZeroOctave</h3>
-          <hr>
+          <hr class="footer-hr-1">
           <p class = "footer-about" >ZeroOctave Javascript Projects provide some awesome web development projects to work upon and enhance your skills. The motive of this project is to help new learners like you to get familiar with web development skills.</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 ">
-          <!-- developers section -->
-          <h3 class="footer-heading">Developers</h3>
-          <ul class="developers">
-            <hr>
-            <li>Abhishek Kumar</li>
-            <li>Mr. Ånand</li>
-            <li>Abhishek Kumar</li>
-            <li>Jayant Goel</li>
-            <li>Jyoti prakash Rout</li>
-            <li>Prakhar Mishra</li>
-            <li>Souvik Mandal</li>
-            <li>Susmita Dey</li>
-            <li>Vasanti Suthar</li>
+        <!-- developers section -->
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <h3 class="footer-heading">Collaborations</h3>
+          <ul class="organisations">
+            <hr class="footer-hr-1">
+              <a href="https://hacktoberfest.digitalocean.com/" target="_blank"><li>Hacktoberfest 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://icc-techsahead.netlify.app/" target="_blank"><li>ICC 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://dwoc.io/" target="_blank"><li>DWOC 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://gssoc.girlscript.tech/" target="_blank"><li>GSSOC 2022</li><hr class="footer-hr-2"></a>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 icon ">
           <!-- social media icons -->
+        <div class="col-lg-4 col-md-4 col-sm-12 icon">
           <h3 class="footer-heading">Follow Us</h3>
-          <hr>
+          <hr class="footer-hr-1">
           <a href ="https://github.com/ZeroOctave/ZeroOctave-Javascript-Projects"><i class="fa-brands fa-github fa-2x social-icon"></i></a><br>
           <a href="https://twitter.com/zero_octave"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a><br>
           <a href="https://zerooctave.github.io/"><i class="fa-solid fa-globe fa-2x social-icon"></i></a><br>
           <a href="ZeroOctave@protonmail.com"><i class="fa-solid fa-envelope fa-2x social-icon"></i></a><br>
         </div>
+
       </div>
 
       <!-- copyright notice -->
