--- a/index.html
+++ b/index.html
@@ -769,7 +769,17 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+ 
+    <!-- This div is for Meditation feature -->
+    <div class="card card1">
+        <img class="card-img-top" src="./assets/Images/meditation/Image.jpg" alt="Meditation feature">
+        <div class="card-body">
+            <h5 class="card-title">Meditation Feature</h5>
+            <p>Meditate and relax your mind.</p>
+            <a href="./Public/meditation.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+        </div>
+    </div>
+    <!-- This div is for Meditation feature -->
 </body>
 
 </html>
