--- a/index.html
+++ b/index.html
@@ -779,7 +779,48 @@
             <a href="./Public/meditation.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
         </div>
     </div>
-    <!-- This div is for Meditation feature -->
+    <!--End of Meditation feature -->
+    
+    <!-- footer section starts -->
+
+    <footer class="footer">
+      <div class="row">
+        <!-- footer about section -->
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <h3 class="footer-heading">ZeroOctave</h3>
+          <hr class="footer-hr-1">
+          <p class = "footer-about" >ZeroOctave Javascript Projects provide some awesome web development projects to work upon and enhance your skills. The motive of this project is to help new learners like you to get familiar with web development skills.</p>
+        </div>
+        <!-- developers section -->
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <h3 class="footer-heading">Collaborations</h3>
+          <ul class="organisations">
+            <hr class="footer-hr-1">
+              <a href="https://hacktoberfest.digitalocean.com/" target="_blank"><li>Hacktoberfest 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://icc-techsahead.netlify.app/" target="_blank"><li>ICC 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://dwoc.io/" target="_blank"><li>DWOC 2021</li><hr class="footer-hr-2"></a>
+              <a href="https://gssoc.girlscript.tech/" target="_blank"><li>GSSOC 2022</li><hr class="footer-hr-2"></a>
+          </ul>
+        </div>
+          <!-- social media icons -->
+        <div class="col-lg-4 col-md-4 col-sm-12 icon">
+          <h3 class="footer-heading">Follow Us</h3>
+          <hr class="footer-hr-1">
+          <a href ="https://github.com/ZeroOctave/ZeroOctave-Javascript-Projects"><i class="fa-brands fa-github fa-2x social-icon"></i></a><br>
+          <a href="https://twitter.com/zero_octave"><i class="fa-brands fa-twitter fa-2x social-icon"></i></a><br>
+          <a href="https://zerooctave.github.io/"><i class="fa-solid fa-globe fa-2x social-icon"></i></a><br>
+          <a href="ZeroOctave@protonmail.com"><i class="fa-solid fa-envelope fa-2x social-icon"></i></a><br>
+        </div>
+
+      </div>
+
+      <!-- copyright notice -->
+      <div class="copyright">
+        <p class="copyright-message">© Copyright 2021-2022.<br>All rights reserved.</p>
+      </div>
+    </footer>
+    <!-- footer section ends -->
+    
 </body>
 
 </html>
