Updated directory of app.js

--- a/Public/meditation.html
+++ b/Public/meditation.html
@@ -49,6 +49,6 @@
             </button>
          </div>
      </div>
-    <script src="app.js"></script>
+    <script src="../assets/Js/app.js"></script>
 </body>
 </html>
