--- a/index.html
+++ b/index.html
@@ -775,6 +775,16 @@
             </div>
         </div>
         <!--End of password generator website-->
+         <!--This div is for Memory game-->
+         <div class="card card1">
+            <img class="card-img-top" src="assets/Images/memory/memoryimg.jpeg" alt="memory game">
+            <div class="card-body">
+                <h5 class="card-title">Memory game</h5>
+                <p>Match the candies before timer runs out...!</p>
+                <a href="Public/memory.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!--End of memory game-->
 
     </div>
     <!-- Optional JavaScript -->
