--- a/index.html
+++ b/index.html
@@ -776,25 +776,24 @@
         </div>
         <!--End of password generator website-->
 
+        <!-- This is for RD return calculator project -->
+        <div class="card card1">
+            <img class="card-img-top" src="./assets/Images/RD-return-calculator.png" alt="RD-return-calculator">
+            <div class="card-body">
+              <h5 class="card-title">RD return calculator</h5>
+              <p>Calculates RD return</p>
+              <a href="./Public/RD-return-calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!-- End of RD return calculator -->
+
     </div>
     <!-- Optional JavaScript -->
 
-<<<<<<< HEAD
-<!-- This is for RD return calculator project -->
-<div class="card card1">
-  <img class="card-img-top" src="./assets/Images/RD-return-calculator.png" alt="Transpose-Matrix Calculator">
- <div class="card-body">
-    <h5 class="card-title">RD return calculator</h5>
-    <p>Calculates RD return</p>
-    <a href="./Public/RD-return-calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
-  </div>
-</div>
-<!-- End of RD return calculator -->
+
 
 </div> 
   <!-- Optional JavaScript -->
-=======
->>>>>>> 015f65cf276f09bb5d6ac7065874cc3d29c0f0c8
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
