--- a/index.html
+++ b/index.html
@@ -752,6 +752,17 @@
         </div>
         <!--End of Transpose-Matrix Calculator website-->
 
+          <!-- This div is for travel game -->
+          <div class="card card1">
+            <img class="card-img-top" src="assets/Images/travel_game/travel.png" alt="Travel game">
+            <div class="card-body">
+                <h5 class="card-title">Travel game</h5>
+                <p>Travel the endless path..</p>
+                <a href="../ZeroOctave-Javascript-Projects/Public/Travel game.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!-- End of travel game -->
+
         <!--This div is for password generator website-->
         <div class="card card1">
             <img class="card-img-top" src="assets/Images/password generator.png" alt="password generator">
