Added project to index.html

--- a/index.html
+++ b/index.html
@@ -797,6 +797,17 @@
         </div>
         <!-- End of RD return calculator -->
 
+        <!-- Third Degree Equation Solver -->
+        <div class="card card1">
+            <img class="card-img-top" src="https://user-images.githubusercontent.com/64689436/159751342-cd4e002d-479f-47b2-be8e-b24a58177409.png" alt="Third Degree Equation Solver">
+            <div class="card-body">
+              <h5 class="card-title">Third Degree Equation Solver</h5>
+              <p>Solves Third Degree Equation</p>
+              <a href="./Public/Third_Degree_Equation_Calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!-- Third Degree Equation Solver -->
+
     </div>
     <!-- Optional JavaScript -->
 
