--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
                   window.open("Public/memory.html");
                   if(filter=="RD RETURN CALCULATOR")
                   window.open("./Public/RD-return-calculator.html");
+                  if(filter=="SPEECH SYNTHESIS")
+                  window.open("./Public/speech_synthesis.html");
           }
                   </script>
         <!--This column is for Analog clock-->
@@ -957,6 +959,17 @@
             </div>
         </div>
         <!-- Function Grapher Card -->
+
+        <!--This div is for Speech Synthesis-->
+  <div class="card card1">
+    <img class="card-img-top" src="assets/Images/speechsynthesis.png" alt="speech_synthesis">
+   <div class="card-body">
+      <h5 class="card-title">Speech Synthesis</h5>
+      <p>Controls rate and pitch of speech.</p>
+      <a href="Public/speech_synthesis.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
+  <!--End of Speech Synthesis-->
 
     </div>
     <!-- Optional JavaScript -->
