--- a/index.html
+++ b/index.html
@@ -808,6 +808,41 @@
         </div>
         <!--End of Meditation feature -->
     
+
+        <!-- Function Grapher Card -->
+        <div class="card card1">
+            <img class="card-img-top" src="https://user-images.githubusercontent.com/64689436/160159074-af2519ff-d060-4d99-95a1-e3bcd535ae82.png" alt="Function-Grapher">
+            <div class="card-body">
+              <h5 class="card-title">Function Grapher</h5>
+              <p>Function Grapher</p>
+              <a href="./Public/Function_Grapher.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!-- Function Grapher Card -->
+
+      <!-- Third Degree Equation Solver -->
+        <div class="card card1">
+            <img class="card-img-top" src="https://user-images.githubusercontent.com/64689436/159751342-cd4e002d-479f-47b2-be8e-b24a58177409.png" alt="Third Degree Equation Solver">
+            <div class="card-body">
+              <h5 class="card-title">Third Degree Equation Solver</h5>
+              <p>Solves Third Degree Equation</p>
+              <a href="./Public/Third_Degree_Equation_Calculator.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!-- Third Degree Equation Solver -->
+
+        <!--This div is for Speech Synthesis-->
+  <div class="card card1">
+    <img class="card-img-top" src="assets/Images/speechsynthesis.png" alt="speech_synthesis">
+   <div class="card-body">
+      <h5 class="card-title">Speech Synthesis</h5>
+      <p>Controls rate and pitch of speech.</p>
+      <a href="Public/speech_synthesis.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+    </div>
+  </div>
+  <!--End of Speech Synthesis-->
+
+    
     </div>
     <!-- Optional JavaScript -->
 
