added key detector in index.html

--- a/index.html
+++ b/index.html
@@ -984,6 +984,17 @@
   </div>
   <!--End of Speech Synthesis-->
 
+    <!--This div is for Key Detector-->
+    <div class="card card1">
+        <img class="card-img-top" src="assets/Images/key_Detector.png" alt="speech_synthesis">
+       <div class="card-body">
+          <h5 class="card-title">Key Detector</h5>
+          <p>Shows which key one has pressed on the keyboard.</p>
+          <a href="Public/key_Detector.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+        </div>
+      </div>
+      <!--End of Key Detector-->
+
     </div>
     <!-- Optional JavaScript -->
 
