updated sticky notes application

--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,17 @@
         </div>
         <!--End of Form validation In JS-->
 
+        <!--This div is for Sticky Notes application-->
+        <div class="card card1">
+            <img class="card-img-top" src="assets/Images/sticky_notes.png" alt="Sticky Notes">
+            <div class="card-body">
+                <h5 class="card-title">Sticky Notes</h5>
+                <p>Create your own sticky notes. Yes, you may throw all of those paper sticky notes away now!</p>
+                <a href="Public/sticky_notes.html" target="_blank" class="btn btn-outline-primary">Try Now</a>
+            </div>
+        </div>
+        <!--End of Sticky Notes application-->
+
     </div>
     <!-- Optional JavaScript -->
 
